Opened 5 years ago
Closed 5 years ago
#8534 closed defect (fixed)
Fails to compile with Decklink SDK 11.5
Reported by: | Elliott | Owned by: | Marton Balint |
---|---|---|---|
Priority: | normal | Component: | avdevice |
Version: | git-master | Keywords: | decklink |
Cc: | Marton Balint | Blocked By: | |
Blocking: | Reproduced by developer: | no | |
Analyzed by developer: | no |
Description
Summary of the bug:
Compiling with Blackmagic Decklink SDK 11.5 fails with these errors. It's working fine with SDK 11.4.
libavdevice/decklink_common.cpp:276:52: error: too few arguments to function call, expected 7, have 5 &support) != S_OK) ^ libavdevice/decklink_common.cpp:282:65: error: too few arguments to function call, expected 7, have 6 &actualMode, &support) != S_OK || !supp... ^
How to reproduce:
Compile from git master
$ ./configure --enable-libmp3lame --enable-libopenjpeg --enable-libass --enable-libbluray --enable-libfreetype --enable-opencl --enable-libx264 --enable-libx265 --enable-gpl --enable-nonfree --enable-decklink --enable-libfdk-aac --enable-ffplay --extra-cflags="-I./BMD_SDK/include -I/opt/local/include" --extra-ldflags="-L/opt/local/lib" $ make -j8
Change History (3)
comment:1 by , 5 years ago
Cc: | added |
---|---|
Owner: | set to |
Status: | new → open |
comment:2 by , 5 years ago
Component: | undetermined → avdevice |
---|---|
Keywords: | decklink added |
Version: | unspecified → git-master |
comment:3 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | open → closed |
Fixed in f32f9231dd4f74d9f95eef575b838bdc3e06a234.
Note:
See TracTickets
for help on using tickets.
https://patchwork.ffmpeg.org/project/ffmpeg/patch/20200222182948.5538-2-cus@passwd.hu/