avdevice/decklink: add support for SDK version 11.5

Fixes ticket #8534.

Signed-off-by: Marton Balint <cus@passwd.hu>